# PGC

./: .gitignore  Agent.md  CONTRIBUTING.md  pyproject.toml
.agent/rules/: adapter.md  architecture.md  issue-driven.md
.agent/solutions/: README.md  gh-token-scope.md  git-branch-orphan.md  git-sandbox-write.md
docs/: roadmap.md
docs/archive/tgs-pgc-embedded-v0/: instructions.md  operating-spec.md  traceability-contract.yaml
docs/issues/1-pgc-cli/: spec.md  test-plan.md
docs/philosophy/: pgc-philosophy-v0.1.md
docs/runtime-mapping/: claude-code.md  claude.md  cursor.md  langgraph.md  trae.md
docs/spec/: pgc-spec-v0.3.md
examples/: README.md  coding-agent-pgc.yaml
governance_config/: __init__.py  adapter_registry.py  assembler.py  model.py
journal/: README.md  manifest.yaml
journal/adapters/: file.md
journal/injection/: pgc-tgs-combined.yaml  standalone.yaml
pgc_adapter/: __init__.py  base.py
pgc_adapter/claude/: __init__.py  generator.py
pgc_adapter/trae/: __init__.py  generator.py
pgc_core/: cli.py  model.py  validator.py
tests/: conftest.py  test_adapter_versioning.py  test_assembly_cache.py  test_base_adapter.py  test_capability_ownership.py  test_claude_adapter.py  test_cli.py  test_gate_coverage.py  test_governance_config_assembler.py  test_governance_config_model.py  test_journal_assembler.py  test_referential_integrity.py  test_tgs_docs.py  test_trae_adapter.py  test_valid_document.py  test_validator.py
tgs/: README.md  instructions.md  operating-spec.md
tgs/audit/: audit-report-template.md
tgs/injection/: standalone.yaml
(+20 files in other folders)
