[project]
name = "pgc-core"
version = "0.3.0"
description = "PGC (Persona-Governance-Capability) - Agent Governance Schema CLI"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pgc = "pgc_core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
